<resources>
    <string name="app_name">Ank@n</string>

    <string name="title">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="buildItBigger">Build it Bigger</string>
    <string name="xyzReader">Xyz Reader</string>
    <string name="library">Library App</string>
    <string name="scores">Scores App</string>
    <string name="movies">Spotify Streamer</string>
    <string name="capstone">Capstone Project</string>
</resources>
