<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffda"
    style="@android:style/Holo.SegmentedButton">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        style="@android:style/TextAppearance.Holo.Large" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:id="@+id/movies"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#5ac1ff"
        android:paddingBottom="1dp"
        android:onClick="respond"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:layout_marginTop="10dp"
        android:id="@+id/scores"
        android:layout_centerHorizontal="true"
        android:background="#5ac1ff"
        android:layout_below="@+id/movies"
        android:gravity="center"
        android:layout_alignLeft="@+id/movies"
        android:layout_alignRight="@+id/movies"
        android:layout_alignEnd="@+id/movies"
        android:onClick="respond"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:layout_marginTop="10dp"
        android:id="@+id/library"
        android:background="#5ac1ff"
        android:layout_below="@+id/scores"
        android:layout_alignLeft="@+id/scores"
        android:layout_alignStart="@+id/scores"
        android:layout_alignRight="@+id/scores"
        android:layout_alignEnd="@+id/scores"
        android:onClick="respond"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/buildItBigger"
        android:background="#5ac1ff"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/library"
        android:layout_alignRight="@+id/library"
        android:layout_alignEnd="@+id/library"
        android:layout_alignLeft="@+id/library"
        android:layout_alignStart="@+id/library"
        android:onClick="respond"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzReader"
        android:layout_marginTop="10dp"
        android:id="@+id/reader"
        android:background="#5ac1ff"
        android:layout_below="@+id/buildItBigger"
        android:layout_alignRight="@+id/buildItBigger"
        android:layout_alignEnd="@+id/buildItBigger"
        android:layout_alignLeft="@+id/buildItBigger"
        android:layout_alignStart="@+id/buildItBigger"
        android:onClick="respond"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/reader"
        android:layout_alignLeft="@+id/reader"
        android:layout_alignStart="@+id/reader"
        android:layout_alignRight="@+id/reader"
        android:layout_alignEnd="@+id/reader"
        style="@android:style/Holo.Light.ButtonBar"
        android:background="#ff342b"
        android:onClick="respond"/>

</RelativeLayout>
